Name:             orchid
Version:          0.0.10
Description:      Haskell Wiki Library
Synopsis:         Haskell Wiki Library
Category:         Network, Web
Cabal-version:    >= 1.6
License:          BSD3
License-file:     LICENSE
Author:           Sebastiaan Visser
Maintainer:       sfvisser@cs.uu.nl
Build-Type:       Simple
Build-Depends:    base ==4.*,
                  bytestring ==0.9.*,
                  filestore ==0.3.*,
                  salvia-protocol ==0.1.*,
                  transformers ==0.1.*,
                  utf8-string ==0.3.*,
                  safe ==0.2,
                  fclabels ==0.4.*,
                  monads-fd ==0.0.*,
                  extensible-exceptions ==0.1.*,
                  orchid-doc ==0.0.*,
                  process ==1.0.*,
                  xml ==1.3.*,
                  salvia-extras ==0.3.*,
                  salvia ==0.3.*
GHC-Options:      -fglasgow-exts -threaded
Extensions:       CPP
HS-Source-Dirs:   src
Other-modules:    Paths_orchid
Exposed-modules:  Network.Orchid.Core.Format,
                  Network.Orchid.Core.Handler,
                  Network.Orchid.Core.Liaison,
                  Network.Orchid.Format.Haskell,
                  Network.Orchid.Format.History,
                  Network.Orchid.Format.Html,
                  Network.Orchid.Format.Latex,
                  Network.Orchid.Format.Pdf,
                  Network.Orchid.Format.Plain,
                  Network.Orchid.Format.Xml,
                  Network.Orchid.FormatRegister,
                  Network.Orchid.Wiki
Data-Files:       viewer/favicon.gif
                  viewer/img/shadow00.png
                  viewer/img/shadow01.png
                  viewer/img/shadow02.png
                  viewer/img/shadow03.png
                  viewer/img/shadow04.png
                  viewer/img/shadow10.png
                  viewer/img/shadow14.png
                  viewer/img/shadow20.png
                  viewer/img/shadow24.png
                  viewer/img/shadow30.png
                  viewer/img/shadow34.png
                  viewer/img/shadow40.png
                  viewer/img/shadow41.png
                  viewer/img/shadow42.png
                  viewer/img/shadow43.png
                  viewer/img/shadow44.png
                  viewer/img/stripes.png
                  viewer/img/uu.png
                  viewer/img/loading.gif
                  viewer/js/app.js
                  viewer/js/jquery-1.2.6.js
                  viewer/js/jquery.history.js
                  viewer/js/ui.js
                  viewer/js/utils.js
                  viewer/show.html
                  viewer/style/main.css
                  viewer/style/page.css
                  viewer/style/plugins.css
                  viewer/style/ui.ccss
                  viewer/style/viewer.css


